<resources>
    <string name="app_name">KChat</string>
    <string name="king_loginTitle">欢迎使用KChat</string>
    <string name="king_inputPhoneNumber">输入手机号</string>
    <string name="codeLogin">登录</string>
    <string name="login">登录</string>
    <string name="loginPsd">请输入密码</string>
    <string name="login_hint">登录</string>
    <string name="regis_hint">注册</string>
    <string name="login_shortcut">点击注册</string>
    <string name="loginForgetPsd">忘记密码</string>
    <string name="loginPassWordMisTake">账号或密码错误，请重新输入</string>
    <string name="inputPhoneNumber">请输入手机号码</string>
    <string name="inputPsd">请输入密码</string>
    <string name="countAndPsdIsemoty">账号密码不能为空</string>
    <string name="emailAndCodeIsemoty">邮件或验证码不能为空</string>
    <string name="emailIsemoty">邮件不能为空</string>
    <string name="inputEmail">请输入邮箱地址(仅限QQ或者163)</string>
    <string name="inputCode">请输入验证码</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news">消息</string>
    <string name="users">用户</string>
    <string name="mine">我的</string>
</resources>
