<?xml version="1.0" encoding="utf-8"?>

<layout>
    <data>
        <variable
            name="registerVM"
            type="mina.king.com.minademo.login.viewModel.RegisterViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@mipmap/bg_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ui.king.com.kinglibrary.view.BaseTitle
            android:id="@+id/icTitle"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:centerTitle = "注册"
            app:rightTitle = ""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:addTextChangedListener="@{registerVM.phoneNumber}"
            android:id="@+id/etInputPhoneNum"
            android:text="@{registerVM.phone}"
            android:background="@null"
            android:maxLength="11"
            android:inputType="number"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/color_333333"
            android:textColorHint="@color/color_CCCCCC"
            android:layout_marginRight="@dimen/dip_25"
            android:layout_marginLeft="@dimen/dip_25"
            android:layout_marginTop="@dimen/dip_56"
            app:layout_constraintTop_toBottomOf="@+id/icTitle"
            android:hint="@string/inputPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/imDelete"
            android:visibility="@{registerVM.isShow}"
            android:onClick="@{registerVM.deletePhoneNumber}"
            android:padding="@dimen/dip_10"
            android:layout_marginRight="@dimen/dip_15"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPsdLogin"
            android:layout_marginTop="@dimen/dip_48"
            android:src="@mipmap/icon_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/etPhoneLine"
            android:layout_marginTop="@dimen/dip_16"
            android:layout_marginLeft="@dimen/dip_25"
            android:layout_marginRight="@dimen/dip_25"
            app:layout_constraintTop_toBottomOf="@id/etInputPhoneNum"
            style="@style/line_horizontal_matchParent"/>

        <EditText
            android:addTextChangedListener="@{registerVM.psd}"
            android:id="@+id/etInputCodeNum"
            android:singleLine="true"
            android:background="@null"
            android:maxLength="20"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/white"
            android:textColorHint="@color/color_CCCCCC"
            android:layout_marginRight="@dimen/dip_25"
            android:layout_marginLeft="@dimen/dip_25"
            android:layout_marginTop="@dimen/dip_25"
            app:layout_constraintTop_toBottomOf="@+id/etPhoneLine"
            android:hint="@string/inputPsd"
            android:imeOptions="actionGo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ImageView
            android:visibility="invisible"
            android:id="@+id/ivShowPsd"
            android:layout_marginTop="@dimen/dip_18"
            android:layout_marginRight="@dimen/dip_15"
            app:layout_constraintRight_toRightOf="parent"
            android:padding="@dimen/dip_10"
            app:layout_constraintTop_toBottomOf="@+id/etPhoneLine"
            android:src="@mipmap/icon_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/etCodeLine"
            android:layout_marginTop="@dimen/dip_16"
            android:layout_marginLeft="@dimen/dip_25"
            android:layout_marginRight="@dimen/dip_25"
            app:layout_constraintTop_toBottomOf="@id/etInputCodeNum"
            style="@style/line_horizontal_matchParent"/>

        <TextView
            android:id="@+id/tvLoginState"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="@dimen/dip_25"
            android:layout_marginTop="@dimen/dip_12"
            app:layout_constraintTop_toBottomOf="@+id/etCodeLine"
            android:textColor="@color/color_EA7B58"
            android:text="@string/loginPassWordMisTake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/tvIfCount"
            android:onClick="@{registerVM.loginButton}"
            android:layout_marginLeft="@dimen/dip_40"
            android:layout_marginRight="@dimen/dip_40"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dip_50"
            android:text="@string/regis_hint"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/text_size_18"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etCodeLine" />



    </android.support.constraint.ConstraintLayout>
</layout>

